# femdesign-api

./: .gitignore  FD-24.00.001-strusoft.xsd  FEM-Design 24.00.001.cs  README.md  femdesign-api.sln  strusoft.xsd
FemDesign.Core/: FemDesign.Core.csproj  FemDesignConnection.cs
FemDesign.Core/AuxiliaryResults/: ResultPointsGeometry.cs  VirtualBarContainer.cs
FemDesign.Core/Bars/: Bar.cs  BarPart.cs  Connectivity.cs
FemDesign.Core/Calculate/: Analysis.cs  Application.cs  Bedding.cs  CmdCalculation.cs  DiaphragmType.cs  DocTable.cs  FdScript.cs  ListProc.cs  Options.cs
FemDesign.Core/Drawing/: Curve.cs  DimensionLinear.cs  (+2 more)
FemDesign.Dynamo/: FemDesign.Dynamo.csproj
FemDesign.Grasshopper/: FemDesign.Grasshopper.csproj  packages.config
FemDesign.Installer/: FemDesign.Installer.csproj  MainWindow.Designer.cs  MainWindow.cs  Program.cs
FemDesign.Python/: PUBLISHING.md  README.md  pyproject.toml  strusoft25.xsd
FemDesign.Python/examples/: README.md
FemDesign.Python/examples/01_basic_static_analysis/: README.md  basic_static_analysis.py
FemDesign.Python/examples/02_eigen_freq_analysis/: README.md  eigen_freq_analysis.py
FemDesign.Python/examples/03_modify_struxml/: README.md  modify_struxml.py
FemDesign.Python/examples/04_create_model/: README.md  create_model.py  model.struxml
FemDesign.Python/femdesign/: comunication.py  interop.py  io.py
FemDesign.Python/femdesign/calculate/: command.py
FemDesign.Python/femdesign/utilities/: filehelper.py
FemDesign.Python/test/: test_analysis.py  test_database.py
FemDesign.Tests/: FemDesign.Tests.csproj
(+254 files in other folders)
